--- a/package.json
+++ b/package.json
@@ -13,13 +13,16 @@
     "@types/multer": "^2.0.0",
     "autoprefixer": "^10.4.21",
     "cheerio": "^1.1.2",
+    "clsx": "^2.1.1",
     "https-proxy-agent": "^7.0.6",
     "mammoth": "^1.10.0",
     "multer": "^2.0.2",
     "next": "15.4.6",
     "playwright": "^1.54.2",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "react-icons": "^5.5.0",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
